<resources>
    <string name="app_name">MessengerPigeon</string>
    <string name="send">Send</string>
    <string name="flappyPigeon">Play Flappy Pigeon</string>
    <string name="login">Login</string>
    <string name="messages">Enter message here...</string>
    <string name="signIn">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="createAccount">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="contact_photo">Contact Photo</string>
    <string name="permission_denied_error">ERROR! Can\'t retrieve contacts, because permission denied</string>

</resources>
